--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Second Proyect</title>
+    <title>University Project</title>
     <!--Configuracion de Estilos-->
     <link rel="stylesheet" href="Content/css/BootStrap4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
@@ -24,7 +24,6 @@
     <script src="AngularApp/JavaScript/Configuration/services.js"></script>
     <script src="AngularApp/JavaScript/Configuration/config.js"></script>
     <!--Controladores de Angular-->
-    <script src="AngularApp/JavaScript/Controllers/appController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/loginController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/universityController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/editUniversityController.js"></script>
