--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <script src="AngularApp/JavaScript/Controllers/loginController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/universityController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/editUniversityController.js"></script>
+    <script src="AngularApp/JavaScript/Controllers/careerController.js"></script>
+    <script src="AngularApp/JavaScript/Controllers/studentsController.js"></script>
 </head>
 <body>
-<div data-ng-view>
+<div data-ng-view class="ngAnimation">
 </div>
 </body>
 </html>
