--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="AngularApp/JavaScript/Controllers/studentsController.js"></script>
 </head>
 <body>
+<header data-ng-include="'AngularApp/Templates/globalHeader.html'"></header>
 <div data-ng-view class="ngAnimation">
 </div>
 </body>
