--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!--Configuracion de Estilos-->
     <link rel="stylesheet" href="Content/css/BootStrap4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="Content/css/MyCss/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.css">
     <link rel="stylesheet" href="Content/css/MyCss/estilos.css">
     <!-- Configuracion de BootStrap 4-->
     <script src="Content/libraries/jquery-3.3.1.min.js"></script>
@@ -17,6 +19,7 @@
     <script src="Content/libraries/angular.min.js"></script>
     <script src="Content/libraries/angular-animate.min.js"></script>
     <script src="Content/libraries/angular-route.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
     <!-- Configuracion de Angular -->
     <script src="AngularApp/JavaScript/Configuration/modules.js"></script>
     <script src="AngularApp/JavaScript/Configuration/constants.js"></script>
@@ -29,6 +32,8 @@
     <script src="AngularApp/JavaScript/Controllers/editUniversityController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/careerController.js"></script>
     <script src="AngularApp/JavaScript/Controllers/studentsController.js"></script>
+    <script src="AngularApp/JavaScript/Controllers/WizardController.js"></script>
+    <script src="AngularApp/JavaScript/Controllers/editStudentController.js"></script>
 </head>
 <body>
 <div data-ng-view class="ngAnimation">
